--- a/gb/22/10/28/n13854686.md
+++ b/gb/22/10/28/n13854686.md
@@ -1,69 +1,59 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>法国媒体调查中共“海外110警察服务站”</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2022/10/id13854718-a2740ef11603d7754c69b0b1e734e41e-600x400.png" />
 <h6>10月27日，法国电视台报导披露对中共在世界各地设非法“110警察服务站”进行调查。（网络截图）
 </h6>
 <hr>
-<p>【大纪元2022年10月28日讯】（大纪元记者吴沃法国报导）<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%B7%B4%E9%BB%8E.md#1">巴黎</a>市中心有秘密的中国警察局吗？10月27日，法国电视台报导披露对中共在世界各地设非法“110警察服务站”进行调查。</p>
+<p>【大纪元2022年10月28日讯】（大纪元记者吴沃法国报导）巴黎市中心有秘密的中国警察局吗？10月27日，法国电视台报导披露对中共在世界各地设非法“110警察服务站”进行调查。</p>
 <p>法国电视台（France Télévisons）派出团队前往荷兰鹿特丹（Rotterdam）市。报导说，“其中一个（中共）警察服务站有可能隐藏在一栋普通的住宅楼”，调查记者敲门，一位西人女士开门回答说：“我们这里只有大使馆。我是荷兰人，我在这里出生长大，我的家人也是。我们与中国没有任何关联。”</p>
 <p>根据民间组织“保护卫士 ”（Safeguard Defenders）报告，来自中国福州的警察以秘密和非法的方式驻扎在美国、加拿大和欧洲各国。</p>
 <p>据“保护卫士 ”负责人劳拉?哈特（Laura Harth）表示，“大部分情况下，这些服务站设在住宅区、餐馆和商店里，就像一个在家中致力于协助安全服务的网络。”</p>
-<p>在欧洲，这些秘密“110警察服务站”遍布法国、英国、意大利、西班牙、荷兰和爱尔兰等国家城市，其中在法国有三个站点，主要集中的大<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%B7%B4%E9%BB%8E.md#1">巴黎</a>地区。</p>
+<p>在欧洲，这些秘密“110警察服务站”遍布法国、英国、意大利、西班牙、荷兰和爱尔兰等国家城市，其中在法国有三个站点，主要集中的大巴黎地区。</p>
 <p>根据“中国长安网”今年2月21日报导，福州市公安局自1月份开始，在全球五大洲设立了首批30个“福州警侨事务海外服务站”，目的是“打好侨牌，驾通海外”。</p>
 <p>在公布的第一批福州警侨事务海外服务站名单中，有巴黎13区华人街区和巴黎东郊大努瓦西（Noisy-le-Grand）站点的地址。</p>
 <p>调查中，法国记者电话联络了位于大努瓦西（Noisy-le-Grand）一个工业区的站点负责人，他电话里回答说：“我们为中国福建警察局”进行“健康检查”或“驾照换证”。</p>
 <p>法国汉学家阿兰?王（Alain WANG）向法国电视台表示，中共的这个做法是为向海外的异议人士施压，把他们送回中国。</p>
 <p>法国参议员安德烈?加托林（André Gattolin）日前接受新唐人电视采访表示，中共的这种做法完全是极权国家的行径，“成立这种民兵式的海外警察站是完全违法的，很危险，应该重视这个问题并从法律上反击。”他说。</p>
 <p><strong>法国电视台的调查报导：</strong></p>
-<p><center><a src="//embedftv-a.akamaihd.net/bcf229cdb2a0733effa936a549e0a474" width="560" b="315" frameborder="0" scrolling="no" allowfullscreen="allowfullscreen"></a></center>责任编辑：王亦笑#</p>
-
-<hr>
-
-
+<p><center><a loading="lazy" src="//embedftv-a.akamaihd.net/bcf229cdb2a0733effa936a549e0a474" width="560" b="315" frameborder="0" scrolling="no" allowfullscreen="allowfullscreen"></a></center>责任编辑：王亦笑#</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/10/10/n13842120.md#1">福州公安在纽约设点 长乐公会被国税局列入黑名单</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/10/10/n13842597.md#1">中共设置海外110警察站 欧洲两国启动调查</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/10/11/n13843260.md#1">中共设海外110警站 加议员吁推进立法制止</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/10/12/n13844082.md#1">中共海外110引关注 加国调查多伦多3警站</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/10/24/n13851909.md#1">【国际技能竞赛】法国场 台湾夺3银2优胜</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/10/27/n13853863.md#1">组图：法国无桅杆双体船 使用自动牵引航行</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/10/n13947517.md#1">旅游业复苏 台湾代表团于巴黎举行观光推广</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/1/n13920337.md#1">世界十大富豪有何变更 LVMH主席仍是首富</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/1/n13920321.md#1">2月1日起 法国电价涨15%</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/28/n13917269.md#1">法国延长对来自中国的旅客入境限制</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/10/10/n13842120.md#1">福州公安在纽约设点 长乐公会被国税局列入黑名单</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/10/10/n13842597.md#1">中共设置海外110警察站 欧洲两国启动调查</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/10/11/n13843260.md#1">中共设海外110警站 加议员吁推进立法制止</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/10/12/n13844082.md#1">中共海外110引关注 加国调查多伦多3警站</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/10/24/n13851909.md#1">【国际技能竞赛】法国场 台湾夺3银2优胜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/10/27/n13853863.md#1">组图：法国无桅杆双体船 使用自动牵引航行</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/9/n14287241.md#1">欧洲杯：西班牙队2:1淘汰法国队 闯入决赛</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/9/n14287098.md#1">巴黎2024奥运 史上首个“冠军公园”登场?</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/9/n14287003.md#1">巴黎奥运试行空中出租车 塞纳河建浮动着陆场</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/7/n14285816.md#1">法国议会选举后总理请辞 马克龙拒绝</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/3/14/n11939875.md#1" target="_blank">“红色殿堂”里的刀光剑影</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/21/n11602447.md#1" target="_blank">他们为我们的生活带来光明（4）</a></li>
-<hr>
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/4/27/n10343446.md#1" target="_blank">刘白：晚清张謇的幻想</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/10/4/n11569061.md#1" target="_blank">法轮功学员受邀在美智库演讲 感动华府听众</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/15/n13950568.md#1">明末改朝换代关帝君显灵  天命不可违人算不如天算</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951783.md#1">挣脱监控 新西兰中领馆出逃员工心路历程</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/18/n13952758.md#1">【未解之谜】别找了 外星人早来地球了</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/14/n13949868.md#1">【古道人生】古代一些被权贵家庭看不起的穷女婿</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/15/n13950328.md#1">【未解之谜】消失的《小人国》</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/20/n13954705.md#1">【热点互动】习普会 北京再批美国民主</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/20/n13954366.md#1">【中国禁闻】中国现同时感染两种毒株患者 专家解读</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/20/n13954365.md#1">【全球新闻】协议达成 瑞士银行将收购瑞士信贷</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/18/n13953298.md#1">中国女篮国手被曝当小三 多次发照片诱惑领队</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/17/n13952121.md#1">Costco退货政策最慷慨 但11类商品不能退</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/18/n13952900.md#1">F-35战机有三大优势 歼-20和苏-57望尘莫及</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/18/n13953323.md#1">大陆配音圈大地震 姜广涛等4人被爆涉刑事犯罪</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/19/n13953953.md#1">御用配音员姜广涛被捕 刘恺威近十年作品恐下架</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/19/n13953394.md#1">帮坤达庆生 被喊艺界扶龙王 柯佳嬿幽默回应</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/19/n13953476.md#1">草蜢隔13年登台开唱 张小燕与2位歌王都到场</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/20/n13954264.md#1">李多海与SE7EN官宣结婚 5月举办婚礼</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/15/n13950837.md#1">年龄大听力一定差？6类护耳食物要多吃</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/19/n13953544.md#1">父母如何让小孩听从指令？ 专家分享三招</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/7/n13944686.md#1">洗蔬果简单又好用的方法 让你不再吃进农药</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/6/n13944006.md#1">穿出职场业务力 改变穿搭好运随之而来</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/17/n13952244.md#1">组图：台湾最美最长的黄金、翠绿双隧道</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14279772.md#1">【古道人生】女子婚姻不好 可能是什么原因？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14280210.md#1">苏轼小时和黠鼠交手 他为何输了？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281646.md#1">【佳人传】 作诗千首 持斋修道的汪端</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14280988.md#1">这仆人怎得变身为太守？一介贫儿又怎成了皇帝亲信呢？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/7/n14285355.md#1">奇怪的数学家（In our Prime）观影有感</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/9/n14286821.md#1">【晚间新闻】美国会议长：推动全面抗中共法案</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/9/n14286981.md#1">【菁英论坛】冲击人类多方面 AI发展遇瓶颈</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/10/n14287904.md#1">【时事金扫描】北京玩一石几鸟 北约瞄准亚太</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/7/n14285774.md#1">躺不平卷不动 中国多地出现“青年养老院”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/3/n14282494.md#1">2024年最好的14款日本车 本田思域居首</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284641.md#1">抢先看 苹果新一代iPhone16带来何种变化</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/8/n14286463.md#1">孙俪自曝被夸“天选打工人” 帖文引两极论战</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/9/n14287232.md#1">武打明星钱小豪被传疾病缠身 暴瘦近照曝光</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/8/n14286087.md#1">《加菲猫：农场大冒险》优于旧作 7月线上发行</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/8/n14285855.md#1">《神偷奶爸4》北美票房登冠 《脑筋急转弯2》让位</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/8/n14286090.md#1">Lia将重启活动 直播落泪感谢ITZY成员与粉丝</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/8/n14286069.md#1">为何飞机从起点到终点的飞行路线非一直线？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/10/n14287637.md#1">专家：随着年龄老化 你应该多吃这种食物</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/4/n14264016.md#1">午觉睡太久 小心失智 心血管疾病上身！</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/9/n14286686.md#1">考场天花板很高 竟会让学生考试成绩变差？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/7/n14285431.md#1">10方法升级玉米罐头 轻松享有粗粮美食</a></li>
 <hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/10/28/n13854686.htm">法国媒体调查中共“海外110警察服务站”</a></p><hr>
-
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/22/10/28/n13854686.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://cn.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://cn.epochtimes.com/gb/22/10/28/n13854686.htm">法国媒体调查中共“海外110警察服务站”</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/22/10/28/n13854686.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
